[package]
name = "coldmaps"
version = "0.4.0"
authors = ["Tails8521 <tails8521@gmail.com>"]
edition = "2021"

[dependencies]
tf-demo-parser = "0.4.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
num_enum = "0.5.0"
image = "0.24.3"
palette = "0.6.1"
iced = { version = "0.4.2", features = ["image", "tokio"] }
iced_native = "0.5.1"
tokio = "1.20.1"
rayon = "1.4.0"
rfd = "0.10.0"
line_drawing = "1.0.0"
enum_dispatch = "0.3.3"
reqwest = { version = "0.11.11", features = ["json"] }
fnv = "1.0.7"

[profile.release]
# lto = true
# codegen-units = 1

[profile.dev.package.tf-demo-parser]
opt-level = 2